# AI_ChatBot

./: .env.example  .gitignore  main.py  pyproject.toml  service.sh  项目说明文档.md
backend/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/routers/: chat_router.py  kb_router.py  user_router.py
backend/services/: chat_service.py  llm_service.py  rag_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Sidebar.jsx
frontend/src/pages/: ChatPage.jsx  KnowledgePage.jsx  LoginPage.jsx
